[Graal] compiler/jvmci/compilerToVM/DisassembleCodeBlobTest.java fails with can't be enqueued for compilation on level 4

XMLWordPrintable

    • b20

        Test fails with:

        java.lang.Error: public default java.lang.Long compiler.jvmci.compilerToVM.CompileCodeTestCase$Interface.defaultOverriddenMethod(compiler.jvmci.compilerToVM.CompileCodeTestCase$Interface[]) can't be enqueued for compilation on level 4
        at compiler.jvmci.compilerToVM.CompileCodeTestCase.compile(CompileCodeTestCase.java:118)
        at compiler.jvmci.compilerToVM.CompileCodeTestCase.compile(CompileCodeTestCase.java:79)
        at compiler.jvmci.compilerToVM.CompileCodeTestCase.deoptimizeAndCompile(CompileCodeTestCase.java:171)
        at compiler.jvmci.compilerToVM.DisassembleCodeBlobTest.check(DisassembleCodeBlobTest.java:87)
        at java.base/java.util.ArrayList.forEach(ArrayList.java:1540)
        at compiler.jvmci.compilerToVM.DisassembleCodeBlobTest.main(DisassembleCodeBlobTest.java:64)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.base/java.lang.reflect.Method.invoke(Method.java:566)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:115)
        at java.base/java.lang.Thread.run(Thread.java:832)

              Assignee:
              Vladimir Kozlov
              Reporter:
              Mikael Vidstedt
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: