8205400: [Graal] compiler/jvmci/compilerToVM/DisassembleCodeBlobTest.java fails with can't be enqueued for compilation on level 4

Add -XX:-BackgroundCompilation to tests to eager initialize JVMCI

Reviewed-by: thartmann